Added more cat images and set up function to add images to array

--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
   </div>
   	
   	<script>
+      var createImage = function(src, title) {
+        var img   = new Image();
+        img.src   = src;
+        img.alt   = title;
+        img.title = title;
+        return img; 
+      };
 
+      // array of images
+      var images = [];
+
+      // push two images to the array
+      images.push(createImage("foo.jpg", "foo title"));
+      images.push(createImage("bar.jpg", "bar title"));
+
+      // output
+      console.log(images);
 
 
 
@@ -20,9 +36,3 @@
   	<script src="js/jquery-3.2.1.min.js"></script>
   </body>
 </html>
-
-<!--	<h1> Cat's Name </h1>
-	<img> Picture </img>
-	<p> "Counter: " + numberOfClicks </p>
-
-</div>
