Loaded jquery earlier and fixed things!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <meta charset="UTF-8">
     <title>Cat Clicker</title>
   </head>
@@ -39,10 +40,10 @@
 
       // output
       //console.log(images);
-        $( "#sideBar").append("<b>test</b>");
-
-
+      for (i = 0; i < images.length; i++) {
+      $( "#sideBar").append("<b>test</b>");
+    }
   	</script>
-  	<script src="js/jquery-3.2.1.min.js"></script>
+
   </body>
 </html>
